--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,48 @@
 }
 
 .landing-grid {
-  background: #833ab4;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 100%;
+	/* max-height: 600px; */
+  width: 100%;
   text-align: center;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+	background-color: hsla(200,40%,30%,.4);
+	background-image:		
+		url('https://78.media.tumblr.com/cae86e76225a25b17332dfc9cf8b1121/tumblr_p7n8kqHMuD1uy4lhuo1_540.png'), 
+		url('https://78.media.tumblr.com/66445d34fe560351d474af69ef3f2fb0/tumblr_p7n908E1Jb1uy4lhuo1_1280.png'),
+		url('https://78.media.tumblr.com/8cd0a12b7d9d5ba2c7d26f42c25de99f/tumblr_p7n8kqHMuD1uy4lhuo2_1280.png'),
+		url('https://78.media.tumblr.com/5ecb41b654f4e8878f59445b948ede50/tumblr_p7n8on19cV1uy4lhuo1_1280.png'),
+		url('https://78.media.tumblr.com/28bd9a2522fbf8981d680317ccbf4282/tumblr_p7n8kqHMuD1uy4lhuo3_1280.png');
+	background-repeat: repeat-x;
+	background-position: 
+		0 20%,
+		0 100%,
+		0 50%,
+		0 100%,
+		0 0;
+	background-size: 
+		2500px,
+		800px,
+		500px 200px,
+		1000px,
+		400px 260px;
+	animation: 50s para infinite linear;
 }
+
+
+@keyframes para {
+	100% {
+		background-position: 
+			-5000px 20%,
+			-800px 95%,
+			500px 50%,
+			1000px 100%,
+			400px 0;
+		}
+	}
+
 
 .title-about {
   position: absolute;
@@ -23,7 +55,7 @@
   transform: translate(-50%, -50%);
   min-width: 250px;
   max-width: 80%;
-  background: #de2a6f;
+  background: #cf750e;
   opacity: 0.97;
   border-radius: 7px;
   padding: 10px;
@@ -100,23 +132,30 @@
 /* contact page css */
 
 .avatar-img {
-  height: 250px;
+  height: 200px;
   padding-top: 5em;
 }
 
 .banner-text {
   background-color: black;
   opacity: .8;
-  width: 75%;
+  width: 55%;
   margin: auto;
   border-radius: 10px;
+  
 }
 
 .banner-text h1 {
-  font-size: 66px;
+  font-size: 60px;
   font-weight: bold;
   color: white;
 }
+.banner-text h3 {
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+}
+
 
 .banner-text hr {
   border-top: 5px dotted white;
